[gd_scene load_steps=7 format=3 uid="uid://estmopfy4idj"]

[ext_resource type="Script" path="res://Escenas/MainMenu.gd" id="1_g14ua"]
[ext_resource type="Texture2D" uid="uid://iwt2mhinad6m" path="res://Assets/Wallpaper.jpg" id="2_tp0y4"]
[ext_resource type="Theme" uid="uid://infegbnmvssg" path="res://ButtonTheme.tres" id="2_x3bon"]
[ext_resource type="Texture2D" uid="uid://5yat2ntjhlbt" path="res://Assets/Characters.png" id="2_y1r7h"]
[ext_resource type="Texture2D" uid="uid://digi5h7p5jd8j" path="res://Assets/Logo.png" id="3_x6n7g"]

[sub_resource type="Theme" id="Theme_v622e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_v622e")
script = ExtResource("1_g14ua")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tp0y4")
expand_mode = 1

[node name="Characters" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -225.0
offset_bottom = 225.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_y1r7h")
expand_mode = 1

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 55.0
offset_top = 25.0
offset_right = 687.0
offset_bottom = 365.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_x6n7g")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -93.0
offset_right = 336.0
offset_bottom = 221.0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_x3bon")
text = "Jugar"

[node name="Demo" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_x3bon")
text = "Demo"

[node name="Option" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_x3bon")
text = "tablero"
icon_alignment = 1

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_x3bon")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Salir"
icon_alignment = 1

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Demo" to="." method="_on_demo_pressed"]
[connection signal="pressed" from="Buttons/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
